--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "swiper": "^8.4.5"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "autoprefixer": "^10.4.7",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
