--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "html-react-parser": "^3.0.4",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
+    "next-share": "^0.19.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-redux": "^8.0.1",
