--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "heroicons": "^2.0.16",
     "html-react-parser": "^3.0.4",
+    "lodash": "^4.17.21",
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "next-share": "^0.19.0",
