--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-share": "^0.19.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-iframe": "^1.8.5",
     "react-masonry-css": "^1.0.16",
     "react-redux": "^8.0.1",
     "sharp": "^0.31.3",
