--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.1.6",
     "next-redux-wrapper": "^7.0.5",
     "next-share": "^0.19.0",
+    "openai": "^3.2.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-iframe": "^1.8.5",
