--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "^1.8.1",
+    "formik": "^2.4.0",
     "heroicons": "^2.0.16",
     "html-react-parser": "^3.0.4",
     "lodash": "^4.17.21",
